fix: layout align to center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ body {
     min-width: 1600px;
     background: #fff;
     font-size: 14px;
+    margin: 0 auto;
 }
 h1 {
     font-size: 64px;
